--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="container">
                     <div class="singleCol">
                         <p>
-                            Hi! Welcome to my website, my name is Zwierd. On this website I show some of the projects that I've worked on, mainly after my studies (Artificial Intelligence at Universiteit Utrecht). Take a look around!
+                            Hi! Welcome to my website, my name is Zwierd. This website is for testing purposes only.
                         </p>
                     </div>
                 </div>
